Fix filterform button alignment

--- a/css/theme.css
+++ b/css/theme.css
@@ -188,6 +188,11 @@ mark {
   flex-grow: 2;
 }
 
+.flex-bottom {
+  display: flex;
+  align-items: flex-end;
+}
+
 @media only screen and (min-width: 38em) {
 
   .red-header {
